tests/functional/lang/eval-fail-catAttrs-4.err.exp
error:
       … while calling the 'catAttrs' builtin
         at /pwd/lang/eval-fail-catAttrs-4.nix:1:1:
            1| builtins.catAttrs "foo" [
             | ^
            2|   { foo = 1; }

       … while evaluating an element in the list passed as second argument to builtins.catAttrs

       error: expected a set but found an integer: 1
